# healscrape

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
samples/: demo_site.yaml  products.schema.json
src/healscrape/: config.py  exit_codes.py  logging_setup.py  paths.py
src/healscrape/cli/: main.py  quick_runner.py  quick_spec.py  setup_wizard.py  starters.py  ux.py
src/healscrape/domain/: __init__.py  schema_spec.py
src/healscrape/engine/: __init__.py  extract.py  heal_context.py  json_path_util.py  llm_merge.py  service.py  validate.py
src/healscrape/output/: __init__.py  sinks.py
src/healscrape/persistence/: __init__.py  bootstrap.py  db.py  models.py  repositories.py
src/healscrape/providers/: browser.py  fetch.py  rate_limit.py
src/healscrape/providers/llm/: base.py  gemini.py  mock.py
src/healscrape/spec/: __init__.py  loaders.py
tests/: conftest.py  fake_fetcher.py  test_e2e_fast.py  test_e2e_healing_promotes_selectors.py  test_e2e_llm_fallback.py  test_extract_unit.py  test_integration_db.py  test_llm_merge.py  test_quick_runner.py  test_spec_loader_json_path.py  test_validate.py
